[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/player/knight/Knight.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/PeaberryBase.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://characters/enemies/green_slime/GreenSlime.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/menu/Menu.gd" type="Script" id=4]
[ext_resource path="res://common/Fader.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 2 )

[node name="Menu" type="Node2D"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="MainMenu" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="CanvasLayer/MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -94.0
margin_top = 18.0
margin_right = 94.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 1 )
text = "Dungeon Crawler"
align = 1
valign = 1

[node name="Hiscores" type="Label" parent="CanvasLayer/MainMenu"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = -16.0
margin_right = 152.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 4 )
text = "Hi-score - Coins: $0, Floors: 0"
valign = 2

[node name="Player_Knight" parent="CanvasLayer/MainMenu" instance=ExtResource( 1 )]
position = Vector2( 49, 66 )
scale = Vector2( 3, 3 )
script = null

[node name="GreenSlime" parent="CanvasLayer/MainMenu" instance=ExtResource( 3 )]
position = Vector2( 273, 90 )
rotation = 3.14159
scale = Vector2( 3, -3 )
script = null

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -68.5
margin_top = -47.5
margin_right = 68.5
margin_bottom = 73.5
custom_constants/separation = 3

[node name="Start" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
margin_right = 137.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="Instructions" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
margin_top = 31.0
margin_right = 137.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 2 )
text = "Instructions"

[node name="Credits" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
margin_top = 62.0
margin_right = 137.0
margin_bottom = 90.0
custom_fonts/font = SubResource( 2 )
text = "Credits"

[node name="Quit" type="Button" parent="CanvasLayer/MainMenu/VBoxContainer"]
margin_top = 93.0
margin_right = 137.0
margin_bottom = 121.0
custom_fonts/font = SubResource( 2 )
text = "Quit"

[node name="Instructions" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InstructionsLabel" type="Label" parent="CanvasLayer/Instructions"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 1 )
text = "Use arrow keys to navigate
Press Spacebar to use your sword
Collect coins to increase your score
Collect potions to recover health

Descend into the depths of the dungeon and survive as long as possible!"
align = 1
autowrap = true

[node name="Credits" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CreditsLabel" type="Label" parent="CanvasLayer/Credits"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = -89.0
custom_fonts/font = SubResource( 1 )
text = "Created by
Stan Nelson

Assets"
align = 1
autowrap = true

[node name="AssetsLabel" type="Label" parent="CanvasLayer/Credits"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -87.0
margin_right = 160.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 3 )
text = "https://0x72.itch.io/dungeontileset-ii
https://pixel-poem.itch.io/dungeon-assetpuck
https://emhuo.itch.io/peaberry-pixel-font
https://blackdragon1727.itch.io/pixel-mini-effect"
align = 1
autowrap = true

[node name="Fader" type="ColorRect" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Instructions" to="." method="_on_Instructions_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
[connection signal="faded_to_black" from="CanvasLayer/Fader" to="." method="_on_Fader_faded_to_black"]
